# crossterm_serde

./: CHANGELOG.md  Cargo.toml  README.md
src/: key_event_serde.rs  lib.rs
src/snapshots/: crossterm_serde__key_event_serde__testing__derserlize.snap  crossterm_serde__key_event_serde__testing__serlize.snap
