[package]
name = "crossterm_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1" }
once_cell = "1.18.0"
serde = { version = "1.0.171", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["ron"] }
pretty_assertions = "1.4.0"
ron = "0.8.0"
serde_json = "1.0.102"
